# qwiic_rfid

examples/pico/example1/: CMakeLists.txt  rfid_example1.cpp
src/: CMakeLists.txt  qwiic_rfid.cpp  qwiic_rfid.h
